--- a/Codes/index.html
+++ b/Codes/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn HTML5</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" sizes="16x16 32x32 48x48" type="image/png" href="/images/mlwicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/mlwicon.png" />
+    <link rel="mask-icon" href="/images/mlwicon.svg" color="#226DAA" />
+    <link rel="alternate" href="https://www.machinelearningworkshop.com/fr/" hreflang="fr-FR" />
+<link rel="alternate" href="https://www.machinelearningworkshop.com/pt/" hreflang="pt-BR" />
+<link rel="alternate" type="application/x-pdf" href="https://machinelearningworkshop.com/mlw.pdf" />
+<link rel="canonical" href="https://www.machinelearning.com" />
 </head>
-<body>
-    
-</body>
+
+<body></body>
+
 </html>
