--- a/Codes/index.html
+++ b/Codes/index.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn HTML5</title>
+    <base target="_top" href="https://github.com" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" sizes="16x16 32x32 48x48" type="image/png" href="/images/mlwicon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/mlwicon.png" />
-    <link rel="mask-icon" href="/images/mlwicon.svg" color="#226DAA" />
-    <link rel="alternate" href="https://www.machinelearningworkshop.com/fr/" hreflang="fr-FR" />
-<link rel="alternate" href="https://www.machinelearningworkshop.com/pt/" hreflang="pt-BR" />
-<link rel="alternate" type="application/x-pdf" href="https://machinelearningworkshop.com/mlw.pdf" />
-<link rel="canonical" href="https://www.machinelearning.com" />
+    <link rel="icon" sizes="16x16 32x32 48x48" type="image/png" href="/images/micon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/micon.png" />
+    <link rel="mask-icon" href="/images/micon.svg" color="#226DAA" />
+    <link rel="alternate" href="https://www.github.com/fr/" hreflang="fr-FR" />
+    <link rel="alternate" href="https://www.github.com/pt/" hreflang="pt-BR" />
+    <link rel="alternate" type="application/x-pdf" href="https://github.com/mlw.pdf" />
+    <link rel="canonical" href="https://www.github.com" />
 </head>
 
-<body></body>
+<body>
+    <!-- <script defer src="scripts/lightswitch.js"></script>-->
+</body>
 
 </html>
